<resources>
    <string name="app_name">Burger Planet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="order_burgers">CLICK BELOW TO ORDER TASTY BURGERS....</string>

    <string name="Solo">Solo</string>
    <string name="Combo">Combo</string>
    <string name="PartyOrder">Party Order(10)</string>

    <string name="choose_type">Choose Type</string>
    <string name="vegBurger">Veg Burger</string>
    <string name="cheeseBurger">Cheese Burger</string>
    <string name="doublePatty">Double Patty</string>
    <string name="paneerKing">Paneer King</string>
    <string name="planetSpecial">Planet Special</string>


    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="item">Item</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_burger_order">New Burger Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <plurals name="burgers">
        <item quantity="one">%d burger</item>
        <item quantity="other">%d burger</item>
    </plurals>
</resources>