<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.burgerplanet.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.burgerplanet.MenuFragment"
        android:label="@string/choose_type"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_menuFragment_to_pickupFragment"
            app:destination="@id/pickupFragment" />
        <action
            android:id="@+id/action_menuFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.example.burgerplanet.PickupFragment"
        android:label="@string/choose_pickup_date"
        tools:layout="@layout/fragment_pickup" >
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_pickupFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.burgerplanet.SummaryFragment"
        android:label="@string/order_summary"
        tools:layout="@layout/fragment_summary" >
        <action
            android:id="@+id/action_summaryFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>