<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartFragment">


    <data>
        <variable
            name="startFragment"
            type="com.example.burgerplanet.StartFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:importantForAccessibility="no"
                android:scaleType="center"
                app:srcCompat="@drawable/final_burgerr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/order_burgers"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="#2196F3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/order_one_burger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.orderBurger(1)}"
                android:text="@string/Solo"
                app:backgroundTint="#21DA48" />

            <Button
                android:id="@+id/order_two_burgers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.orderBurger(2)}"
                android:text="@string/Combo"
                app:backgroundTint="#FF5722" />

            <Button
                android:id="@+id/order_ten_burgers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.orderBurger(10)}"
                android:text="@string/PartyOrder"
                app:backgroundTint="#FF9800" />


        </LinearLayout>

    </ScrollView>

</layout>